tests/baselines/reference/enumWithParenthesizedInitializer1.errors.txt
enumWithParenthesizedInitializer1.ts(3,1): error TS1005: ')' expected.


==== enumWithParenthesizedInitializer1.ts (1 errors) ====
    enum E {
     e = -(3
    }
    ~
!!! error TS1005: ')' expected.